--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Build and test with GCC
       run: |
         g++ -o my_program main.cpp
-        ./my_program  
+        echo "3" | ./my_program  
